# indy-besu

./: .gitignore  CONTRIBUTING.md  LICENSE  MAINTAINERS.md  README.md  SECURITY.md  config.json  docker-compose.yml
.github/: dependabot.yml
.github/workflows/: indy-besu.yml
docs/: README.md  roadmap.md
docs/design/: auth.md  cl-registry.md  conmponents.puml  contracts.puml  did-method.md  did-methods.md  endorsement.md  flow.puml  indybesu-did-registry.md  legacy-identifiers-support.md  network.md  registry.md  vdr.md
docs/migration/: migration.md
docs/migrtion/: migration.md
examples/: README.md
examples/migration/: Cargo.toml  README.md  besu-config.json
examples/migration/src/: holder.rs  issuer.rs  ledger.rs  main.rs  trustee.rs  verifier.rs  wallet.rs
indy-besu/: .gitignore  README.md
indy-besu/smart_contracts/: environment.ts  package.json
indy-besu/vdr/: Cargo.toml  README.md  build.rs
indy-besu/vdr/src/: bin.rs  lib.rs  test.rs
indy-besu/vdr/src/client/: client.rs  mod.rs  quorum.rs
indy-besu/vdr/src/client/implementation/web3/: client.rs  contract.rs  mod.rs
indy-besu/vdr/src/contracts/: mod.rs
indy-besu/vdr/src/contracts/auth/: role.rs  role_control.rs
indy-besu/vdr/src/contracts/cl/: credential_definition_registry.rs  mod.rs  schema_registry.rs
indy-besu/vdr/src/contracts/cl/types/: credential_definition.rs  credential_definition_id.rs  schema.rs  schema_id.rs
indy-besu/vdr/src/contracts/did/: did_registry.rs
indy-besu/vdr/src/contracts/did/types/: did.rs  did_doc.rs  did_doc_builder.rs  mod.rs
indy-besu/vdr/src/contracts/network/: validator_control.rs  validator_info.rs
indy-besu/vdr/src/error/: mod.rs
indy-besu/vdr/src/migration/: credential_definition.rs  schema.rs
indy-besu/vdr/src/signer/: basic_signer.rs  mod.rs
indy-besu/vdr/src/types/: address.rs  contract.rs  mod.rs  status.rs  transaction.rs
indy-besu/vdr/src/utils/: mod.rs
indy-besu/vdr/uniffi/: README.md
indy-besu/vdr/uniffi/src/: lib.rs
indy-besu/vdr/uniffi/src/ffi/: client.rs  error.rs  mod.rs  transaction.rs  types.rs
indy-besu/vdr/uniffi/src/ffi/contracts/: credential_definition_registry.rs  did_registry.rs  mod.rs  role_control.rs  schema_registry.rs  validator_control.rs
indy-besu/vdr/wasm/: Cargo.toml  README.md
indy-besu/vdr/wasm/demo/node/: package.json  tslint.json
indy-besu/vdr/wasm/demo/node/src/: main.ts
indy-besu/vdr/wasm/src/: client.rs  error.rs  lib.rs  transaction.rs
indy-besu/vdr/wasm/src/contracts/: credential_definition_registry.rs  did_registry.rs  mod.rs  role_control.rs  schema_registry.rs  validator_control.rs
indy-besu/vdr/wrappers/python/: README.md  setup.py
indy-besu/vdr/wrappers/python/demo/: test.py
indy-besu/vdr/wrappers/python/indy2_vdr/: __init__.py  indy2_vdr.py
infrastructure/: README.md  aws-ebs-csi-driver-values.yaml  aws-secret.yaml  blockscout-values.yaml  postgres-values.yaml
network/: config.json
network/scripts/: common.sh  (+5 more)
smart_contracts/: README.md  environment.ts  hardhat.config.ts  package-lock.json  package.json  tslint.json
vdr/: Cargo.toml  README.md  uniffi.toml
vdr/src/: lib.rs  test.rs
vdr/src/client/: client.rs  constants.rs  mod.rs  quorum.rs
vdr/src/client/implementation/: mod.rs
vdr/src/client/implementation/web3/: client.rs  contract.rs  mod.rs
vdr/src/contracts/: endorsing.rs  mod.rs
vdr/src/contracts/anoncreds/: credential_definition_registry.rs  mod.rs  revocation_registry.rs  schema_registry.rs
vdr/src/contracts/anoncreds/types/: credential_definition.rs  credential_definition_id.rs  mod.rs  revocation_registry_definition.rs  revocation_registry_definition_id.rs  revocation_registry_delta.rs  revocation_registry_entry.rs  revocation_registry_events.rs  schema.rs  schema_id.rs
vdr/src/contracts/auth/: mod.rs  role.rs  role_control.rs
vdr/src/contracts/auth/types/: mod.rs  role.rs
vdr/src/contracts/cl/: credential_definition_registry.rs  mod.rs  schema_registry.rs
vdr/src/contracts/cl/types/: credential_definition.rs  credential_definition_id.rs  schema.rs  schema_id.rs
vdr/src/contracts/did/: did_doc.rs  did_doc_builder.rs  did_ethr_registry.rs  did_ethr_resolver.rs  did_indy_registry.rs  did_registry.rs  did_resolver.rs  mod.rs
vdr/src/contracts/did/types/: did.rs  did_doc.rs  did_doc_attribute.rs  did_doc_builder.rs  did_events.rs  mod.rs
vdr/src/contracts/migration/: legacy_identifiers_registry.rs  legacy_mapping_registry.rs  mod.rs
vdr/src/contracts/migration/types/: did.rs  ed25519_signature.rs  identifier.rs  mod.rs  resource_identifier.rs
vdr/src/contracts/network/: mod.rs  validator_control.rs  validator_info.rs
vdr/src/error/: mod.rs
vdr/src/migration/: credential_definition.rs  mod.rs  schema.rs
vdr/src/signer/: basic_signer.rs  mod.rs  signer.rs
vdr/src/types/: address.rs  contract.rs  endorsing_data.rs  event_query.rs  mod.rs  signature.rs  status.rs  transaction.rs
vdr/src/utils/: common.rs  mod.rs
vdr/uniffi/: Cargo.toml  README.md  build.rs
vdr/uniffi/src/: bin.rs  indy2_vdr.udl  indy_besu_vdr.udl  lib.rs
vdr/uniffi/src/ffi/: client.rs  endorsing_data.rs  error.rs  event_query.rs  mod.rs  transaction.rs  types.rs
vdr/uniffi/src/ffi/contracts/: credential_definition_registry.rs  did_ethr_registry.rs  did_indy_registry.rs  did_resolver.rs  endorsing.rs  legacy_mapping_registry.rs  mod.rs  role_control.rs  schema_registry.rs  validator_control.rs
vdr/wasm/: Cargo.toml  README.md
vdr/wasm/demo/node/: package.json
vdr/wasm/demo/node/src/: main.ts
vdr/wasm/src/: client.rs  error.rs  event_query.rs  lib.rs  transaction.rs
vdr/wasm/src/contracts/: credential_definition_registry.rs  did_ethr_registry.rs  did_indy_registry.rs  did_resolver.rs  endorsing.rs  legacy_mapping_registry.rs  mod.rs  revocation_registry.rs  role_control.rs  schema_registry.rs  validator_control.rs
vdr/wrappers/python/: README.md  setup.py
vdr/wrappers/python/demo/: test.py
vdr/wrappers/python/indy2_vdr/: __init__.py  indy2_vdr.py
vdr/wrappers/python/indy_besu_vdr/: __init__.py  indy_besu_vdr.py  types.py  version.py
(+196 files in other folders)
