[package]
name = "indy-besu-vdr"
description = "A client library for interacting with Indy Ledger 2.0."
version = "0.0.1"
authors = ["Artem Ivanov <artem.ivanov@dsr-corporation.com>"]
edition = "2021"
license = "Apache-2.0"
readme = "./README.md"

[lib]
name = "indy_besu_vdr"
path = "src/lib.rs"
crate-type = ["rlib", "cdylib"]

[features]
default = ["web3"]
wasm = ["web-sys", "web3-wasm"]
ledger_test = ["basic_signer"]
basic_signer = ["secp256k1", "rand"]
migration = []

[dependencies]
log = "0.4"
log-derive = "0.4.1"
async-std = { version = "1.12.0", features = ["attributes", "tokio1"] }
async-trait = "0.1.73"
base64 = "0.21.7"
bs58 = "0.5.0"
chrono = "0.4.31"
ethereum = "0.15.0"
ethereum-types = "0.14.1"
ethabi = "18.0.0"
ethers-core = "2.0.12"
hex = "0.4.3"
futures = "0.3.28"
once_cell = "1.18.0"
indy-data-types = "0.7.1"
rand = { version = "0.8.5", optional = true }
secp256k1 = { version = "0.28.0", optional = true, features = ["recovery", "rand"] }
sha3 = "0.10.8"
serde = "1.0.188"
serde_derive = "1.0.188"
serde_json = "1.0.107"
thiserror = "1.0.49"
web3 = { version = "0.20.0", optional = true, default-features = false, features = ["http-rustls-tls", "ws-rustls-tokio", "signing", "ipc-tokio"] }
web-sys = { version = "0.3.64", optional = true, features = ["Window"] }
web3-wasm = { package = "web3", version = "0.20.0", default-features = false, features = ["wasm", "http", "http-tls"], optional = true }
jsonrpc-core = "18.0.0"
regex-lite = "0.1.5"

[dev-dependencies]
rstest = "0.18.2"
mockall = "0.12.0"
env_logger = "0.10.0"
rand = "0.8.5"
ed25519-dalek = { version = "2", features = ["rand_core"] }

[patch.crates-io]
web3 = { git = 'https://github.com/DSRCorporation/rust-web3.git'}
