[package]
name = "indy-besu-vdr-uniffi"
description = "Uni-FFI bindings for Indy 2.0 VDR"
version = "0.1.0"
authors = [
    "Artem Ivanov <artem.ivanov@dsr-corporation.com>",
]
edition = "2021"
license = "Apache-2.0"
readme = "./README.md"

[lib]
name = "indy_besu_vdr_uniffi"
path = "src/lib.rs"
crate-type = ["rlib", "cdylib"]

[[bin]]
name = "uniffi-bindgen"
path = "src/bin.rs"

[features]
default = []

[dependencies]
indy-besu-vdr = { path = ".." }
serde = "1.0.188"
serde_derive = "1.0.188"
serde_json = "1.0.107"
thiserror = "1.0.49"
uniffi = { version = "0.26.1", features = ["tokio", "cli"] }
uniffi_bindgen = { version = "0.26.1", optional = true }

[build-dependencies]
uniffi = { version = "0.26.1", features = [ "build"] }

[dev-dependencies]
uniffi = { version = "0.26.1", features = ["tokio", "cli"] }

[patch.crates-io]
web3 = { git = 'https://github.com/DSRCorporation/rust-web3.git'}