[package]
name = "indy-besu-vdr-wasm"
description = "JavaScript bindings for Indy 2.0 VDR"
version = "0.1.0"
authors = [
    "Artem Ivanov <artem.ivanov@dsr-corporation.com>",
]
edition = "2021"
license = "Apache-2.0"
readme = "./README.md"

[lib]
crate-type = ["cdylib", "rlib"]
name = "indy_besu_vdr_wasm"
path = "src/lib.rs"

[features]
default = []

[dependencies]
indy-besu-vdr = { path = "..", default-features = false, features = ['wasm'] }
wasm-bindgen = "0.2.87"
wasm-bindgen-futures = "0.4.37"
js-sys = "0.3.64"
serde-wasm-bindgen = "0.4"
serde_json = "1.0.107"
futures = "0.3.28"
console_error_panic_hook = "0.1"

[patch.crates-io]
web3 = { git = 'https://github.com/DSRCorporation/rust-web3.git'}
